        Top Game Laser L10 (Bingo) (not working)
        Top Game Turbo (Bingo) (not working)

Correct Dumps:
Bell: Cosmic Flash (sound ROM - might need a redump because it contains an illegal instruction in one byte?)
      Super Bowl (sound ROM redump showed one byte of difference)
LTD:  Space Poker
NBA Fastbreak: Changed 2.1, 2.2 & 2.3 to also use the newer sound ROM S3.0

Clones:
Ali (7-digit conversion Free Play rev. 76)
Dracula (One Ball MOD)
Flipper Football 1.03
Frankenstein 1.03 (Italian)
Galaxy (7-Digit conversion, Fixes & modified rules)
Jungle Lord (new tricks) L2 & L3beta (MOD)
Lightning (Free Play & MOD rev. 25)
Metallica 0.52
Pin-Bot J-2 (PEMBOT (no relation)) (MOD)
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Shadow, The LF-4 (French)
Spirit (initial release) & rev. 3 (MOD)
STTNG LX-8 (MOD) (using the special L-1 sound roms, note that the special callouts can be turned off completely within the game menu)
Swords of Fury LG-2 (German)
Tommy 1.02 (Belgian), 3.01 (German)
White Water P-6 (Prototype)
Wildfyre (One Ball MOD)

Removed Clones:
NBA Fastbreak: 3.1 with Sound S1.0 (as this was just created to be able to use S1.0, which is nowadays wired to 1.1/1.15 instead)
Star Trek: The Next Generation S7/DS (as these were just created to be able to use a P-1 sound rom, (for now) wired to P-4 instead)
White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)



Version 3.5 (October 23rd, 2022) - "Trick or Treat"
------------------------------------------------------------------------------

Saving NVRAM for Juegos Populares

More gracefully handle parsing errors in invalid altsound CSV files to avoid crashes

Updated LISY support to 5.28-76 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'Home' Pinballs)

Updated to zlib 1.2.13

VS2022 build support

*** CORE/CPU ***
Better handle flickering lamps on Sega/Stern Whitestar machines