@@ -249,24 +249,24 @@ DCS_SOUNDROM6x("ts_u2_s.l1",CRC(f1486cfb) SHA1(a916917cb4e46b5d1e04eb4dd52b4193e
                "ts_u6_s.l1",CRC(63b8d2db) SHA1(a662a3280a377ac91fdf55d98d2204e024668706), \
                "ts_u7_s.l1",CRC(62b5db14) SHA1(13832c8573623f9d541de8b814aa10cfb527be99))
 
-WPC_ROMSTART(ts,lh6,"shad_h6.rom", 0x080000,CRC(0a72268d) SHA1(97836afc23c4160bca462f14c115b17e58fe5a48)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,lh6p,"shad_h6p.rom", 0x080000,CRC(508c12de) SHA1(c2926753198c7355df7ec99443c65d9a8468637f)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lh6,"shad_h6.rom",  0x080000,CRC(0a72268d) SHA1(97836afc23c4160bca462f14c115b17e58fe5a48)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lh6p,"shad_h6p.rom",0x080000,CRC(35eb2998) SHA1(8447175433f00767fff34f46dc83d42e1c621eaa)) SHADOW_SOUND WPC_ROMEND
 WPC_ROMSTART(ts,dh6,"shad_dh6.rom", 0x080000,CRC(ce8d6c9d) SHA1(a7ccd3f7d308b7780d46f378cc43c8810df758ab)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,lf6,"u6-lf6.rom",  0x080000,CRC(a1692f1a) SHA1(9df2ecd991a08c661cc22f91dfc6c3dfffcfc3e5)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,df6,"u6-df6.rom",  0x080000,CRC(326a4df4) SHA1(ab0fc5c809c29a4aaaf2b89fe1846274c7818e33)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,lm6,"u6-lm6.rom",  0x080000,CRC(56f15859) SHA1(1fd4d64cff8413903474843dbcfcca3d59b33cd8)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,dm6,"u6-dm6.rom",  0x080000,CRC(e8988f08) SHA1(3ce5cad96396663df0e228420727ae2f90c32d32)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,lx5,"shad_x5.rom", 0x080000,CRC(bb545f83) SHA1(c2851f7169ca3d28399468967c04e69835f61536)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lf6,"u6-lf6.rom",   0x080000,CRC(a1692f1a) SHA1(9df2ecd991a08c661cc22f91dfc6c3dfffcfc3e5)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,df6,"u6-df6.rom",   0x080000,CRC(326a4df4) SHA1(ab0fc5c809c29a4aaaf2b89fe1846274c7818e33)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lm6,"u6-lm6.rom",   0x080000,CRC(56f15859) SHA1(1fd4d64cff8413903474843dbcfcca3d59b33cd8)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,dm6,"u6-dm6.rom",   0x080000,CRC(e8988f08) SHA1(3ce5cad96396663df0e228420727ae2f90c32d32)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lx5,"shad_x5.rom",  0x080000,CRC(bb545f83) SHA1(c2851f7169ca3d28399468967c04e69835f61536)) SHADOW_SOUND WPC_ROMEND
 WPC_ROMSTART(ts,dx5,"shad_dx5.rom", 0x080000,CRC(4fde2492) SHA1(bb434fe5f3011779d76961e70937fd88ded7d74d)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,la4,"u6-la4.rom",  0x080000,CRC(5915cf6d) SHA1(1957988c51b791f76130b8960e9ee61ce17b2088)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,da4,"u6-da4.rom",  0x080000,CRC(ab0e1326) SHA1(995551640a5989d13443f92be7ffe8cbad6709cb)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,lx4,"u6-lx4.rom",  0x080000,CRC(1d908d38) SHA1(9dbc770ea7b22e27439399f92d81f736a12ddf9f)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,dx4,"u6-dx4.rom",  0x080000,CRC(3bef05c4) SHA1(9013ec54cd060c0ef1dc522088f00aa99ce81d3b)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,lf4,"shad_lf4.rom",0x080000,CRC(5ff11d88) SHA1(04a2a1cbe9883ec95981bab783886302ec2151d0)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,la2,"cpu-u6l2.rom",0x080000,CRC(e4cff76a) SHA1(37c01f8c6e88186f3b88808bbfee75005ca4008d)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,da2,"cpu-u6d2.rom",0x080000,CRC(2581817a) SHA1(19e3c6eceb1e87e78009762b3ac852ca27970670)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,la6,"u6-la6.rom",0x080000,CRC(9dc4e944) SHA1(6d29296d88730c05097da92db5114f7d741d4e25)) SHADOW_SOUND WPC_ROMEND
-WPC_ROMSTART(ts,da6,"u6-da6.rom",0x080000,CRC(f09b03fe) SHA1(225697e3abd84f059fc2e8901a073fd758283a07)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,la4,"u6-la4.rom",   0x080000,CRC(5915cf6d) SHA1(1957988c51b791f76130b8960e9ee61ce17b2088)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,da4,"u6-da4.rom",   0x080000,CRC(ab0e1326) SHA1(995551640a5989d13443f92be7ffe8cbad6709cb)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lx4,"u6-lx4.rom",   0x080000,CRC(1d908d38) SHA1(9dbc770ea7b22e27439399f92d81f736a12ddf9f)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,dx4,"u6-dx4.rom",   0x080000,CRC(3bef05c4) SHA1(9013ec54cd060c0ef1dc522088f00aa99ce81d3b)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,lf4,"shad_lf4.rom", 0x080000,CRC(5ff11d88) SHA1(04a2a1cbe9883ec95981bab783886302ec2151d0)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,la2,"cpu-u6l2.rom", 0x080000,CRC(e4cff76a) SHA1(37c01f8c6e88186f3b88808bbfee75005ca4008d)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,da2,"cpu-u6d2.rom", 0x080000,CRC(2581817a) SHA1(19e3c6eceb1e87e78009762b3ac852ca27970670)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,la6,"u6-la6.rom",   0x080000,CRC(9dc4e944) SHA1(6d29296d88730c05097da92db5114f7d741d4e25)) SHADOW_SOUND WPC_ROMEND
+WPC_ROMSTART(ts,da6,"u6-da6.rom",   0x080000,CRC(f09b03fe) SHA1(225697e3abd84f059fc2e8901a073fd758283a07)) SHADOW_SOUND WPC_ROMEND
 
 WPC_ROMSTART(ts,pa1,"cpu-u6p1.rom",0x080000,CRC(835b8167) SHA1(70c00dbe7a7c1a188ef9fe303558e248fdf7230a))
 DCS_SOUNDROM6x("su2-sp2.rom",CRC(ba17f74b) SHA1(9c1f00ea27986d025bcaa6b2ffe8c7c4d2216893),
