@@ -52,6 +52,7 @@ Bell: Cosmic Flash (sound ROM - might need a redump because it contains an illeg
       Super Bowl (sound ROM redump showed one byte of difference)
 LTD:  Space Poker
 NBA Fastbreak: Changed 2.1, 2.2 & 2.3 to also use the newer sound ROM S3.0
+Shadow: Fix checksum of LH-6 with wrong text index patch
 
 Clones:
 Ali (7-digit conversion Free Play rev. 76)
